wip: tweak auto add to make it consistent with child policies

--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -282,11 +282,12 @@
   "admin.access_control.policies.resources.channels": "{count, number} {count, plural, one {channel} other {channels}}",
   "admin.access_control.policies.resources.none": "None",
   "admin.access_control.policies.title": "Access Control Policies",
+  "admin.access_control.policy.channel_list.autoAddHeader": "Auto-add members",
+  "admin.access_control.policy.channel_list.off": "Off",
+  "admin.access_control.policy.channel_list.on": "On",
   "admin.access_control.policy.channels_affected": "Are you sure you want to save and apply the access control policy?",
   "admin.access_control.policy.edit_policy.access_rules.subtitle": "Select user attributes and values as rules to restrict channel membership.",
   "admin.access_control.policy.edit_policy.access_rules.title": "Attribute-based access rules",
-  "admin.access_control.policy.edit_policy.autoSyncMembership": "Auto-add members based on access rules:",
-  "admin.access_control.policy.edit_policy.autoSyncMembership.description": "Users who match the attribute values configured below will be automatically added as new members. Regardless of this setting, users who later no longer match the configured attribute values will be removed from the channel after the next sync.",
   "admin.access_control.policy.edit_policy.channel_selector.addChannels": "Add channels",
   "admin.access_control.policy.edit_policy.channel_selector.remove": "Remove",
   "admin.access_control.policy.edit_policy.channel_selector.subtitle": "Add channels that this attribute-based access policy will apply to.",
